--- a/src/navigation.css
+++ b/src/navigation.css
@@ -1,5 +1,5 @@
 .links{
-  padding-right: 16vw;
+  margin-right: 9.8vw;
 }
 
 #brand {
@@ -9,8 +9,4 @@
 .navbar {
   border-bottom: 0.75px solid black;
   background-color: white;
-}
-
-.nav-link {
-  margin: 10px;
 }
