--- a/src/project.css
+++ b/src/project.css
@@ -1,9 +1,6 @@
 .projectile{
-  width: 550px;
-  height: 390px;
-  margin: 20px;
-  margin-left: 0px;
-  margin-top: 0px;
+  width: 35vw;
+  height: 25vw;
   position: relative;
 }
 
