--- a/src/project.css
+++ b/src/project.css
@@ -19,11 +19,11 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #008CBA;
+  background-color: #303030;
 }
 
 .projectile:hover .overlay {
-  opacity: 0.75;
+  opacity: 0.85;
 }
 
 .text {
