--- a/src/navigation.css
+++ b/src/navigation.css
@@ -1,12 +1,20 @@
 .links{
-  margin-right: 9.8vw;
+  margin-right: 15vw;
 }
 
 #brand {
   padding-left: 16vw;
+  font-weight: bold;
 }
 
 .navbar {
-  border-bottom: 0.75px solid black;
   background-color: white;
+  padding-top: 5px;
+}
+
+.navbar-light .navbar-text a:hover {
+  color: #fc7e65 !important;
+  border-bottom: 1px solid;
+  padding-bottom: 3px;
+  border-width: 50%;
 }
