wrote flexibly article

--- a/src/IterativeDesign.css
+++ b/src/IterativeDesign.css
@@ -2,8 +2,8 @@
   width: 30vw;
   height: 80vh;
   margin: auto;
-  background-color: blue;
   margin-top: 8vh;
+  background-color: black;
   margin-bottom: 6vh;
   position: fixed;
 }
