made images slightly bigger on mobile

--- a/src/IterativeDesign.css
+++ b/src/IterativeDesign.css
@@ -23,3 +23,11 @@
 .hr-carousel-img {
   height: 13vw;
 }
+
+
+@media screen and (max-width: 1000px) {
+  #me-thumbnail {
+    width: 60vw;
+  }
+
+}
