--- a/src/Stopwatch.css
+++ b/src/Stopwatch.css
@@ -6,5 +6,11 @@
 #lol_map {
   width: 60%;
   height: auto;
+}
 
+@media screen and (max-width: 1000px) {
+  #lol_map, #disc_screenshot {
+    width: 60vw;
+    height: auto;
+  }
 }
