--- a/src/Article.css
+++ b/src/Article.css
@@ -23,3 +23,10 @@
   margin-top: 8vh;
   margin-bottom: 6vh;
 }
+
+@media screen and (max-width: 1000px) {
+  .proj-img {
+    width: 60vw;
+    height: auto;
+  }
+}
