--- a/src/ProductExtractor.css
+++ b/src/ProductExtractor.css
@@ -1,3 +1,12 @@
 #init-extraction, #mid-extraction {
     width: 40vw;
 }
+
+
+@media screen and (max-width: 1000px) {
+    #init-extraction, #mid-extraction {
+        width: 60vw;
+        height: auto;
+        margin-left: 0px;
+    }
+}
