--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -1,15 +1,20 @@
 .links{
-  margin-right: 15vw;
+  margin-right: 10.5vw;
 }
 
 #brand {
-  padding-left: 16vw;
+  margin-left: 16vw;
   font-weight: bold;
 }
 
 .navbar {
   background-color: white;
+}
+
+#top-anchor-navbar {
   padding-top: 5px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .burger-menu {
@@ -23,18 +28,20 @@
   border-width: 50%;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1150px) {
   .burger-menu {
-    display: inline;
-    margin-top: 5px;
-    margin-right: 20px;
+    display: block;
+    margin-right: 8vw;
+    width: 200px;
+    height: auto;
+  }
+
+  #brand {
+    margin-left: 13vw;
   }
 
   .links {
     display: none;
   }
 
-  #brand {
-    padding-left: 10vw;
-  }
 }
